;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of iexplore: An IPhone file explorer                                     *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* iexplore is free software: you can redistribute it and/or modify it under the terms        *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* iexplore is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;      *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with iexplore.     *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(include_subdirs unqualified)

(rule
 (targets
  cflags_libimobiledevice-1.0.sexp
  clibrary_flags_libimobiledevice-1.0.sexp)
 (action
  (run ./config/discover.exe)))

(library
 (name cbindings)
 (foreign_stubs
  (language c)
  (names caml_libimobiledevice)
  (flags
   (-Wall)
   (-std=c99)
   (-fPIC)
   (:include cflags_libimobiledevice-1.0.sexp)))
 (c_library_flags
  (:include clibrary_flags_libimobiledevice-1.0.sexp)))
